# finance-automation-portfolio

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  conftest.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
accounts-payable-automation/: README.md  ap_report.json  ap_report.md  pytest.ini  run.py
ai-validation-framework/: FIELD-NOTES.md  README.md  prompt-engineering.md  run.py
assets/: make_brain_flow.py  make_demo_gif.py  make_system_gifs.py
audit-automation/: README.md  run.py  validation_report.json  validation_report.md
buyer-upgrade-automation/: README.md  pytest.ini  run.py  upgrade_report.json  upgrade_report.md
cash-completeness-engine/: README.md  run.py
cash-management/: README.md  pyproject.toml
cash-management/cash_engine/: __init__.py  __main__.py  cli.py  outstanding_checks.py
cash-management/cash_engine/tests/: __init__.py  test_bank_rec.py  test_bank_register.py  test_cash_concentration.py  test_cli.py  test_curated_invariant_grid.py  test_outstanding_checks.py  test_wire_approval.py
cash-reconciliation/: .gitignore  README.md  evidence-log.md  pyproject.toml  run.py  verification-patterns.md
cash-reconciliation/recon_engine/: __init__.py  __main__.py  bank_rec.py  bank_register.py  cash_concentration.py  cli.py  engine.py  generate.py  loop.py  report.py  wire_approval.py
cash-reconciliation/recon_engine/tests/: __init__.py  test_bank_rec.py  test_bank_register.py  test_bulk_invariant_grid.py  test_cash_concentration.py  test_cash_manager_invariant_grid.py  test_curated_invariant_grid.py  test_discrepancies.py  test_engine.py  test_engine_coverage.py  test_engine_parametric_suite.py  test_generate_coverage.py  test_loop.py  test_outstanding_checks.py  test_report.py  test_report_cli_coverage.py  test_report_generate_parametric.py  test_wire_approval.py
cash-reconciliation/samples/: sample-evidence-log.md
docs/: AGENT-OPERATIONS.md  BRAND-VOICE.md  CASE-STUDY.md  CNAME  CODEX-REVIEW-PROMPT.md  DEMO-WALKTHROUGH.md  DEPLOYMENT-TRACKS.md  LINKEDIN-POST-DRAFT.md  OPERATIONAL-HARDENING.md  index.html  robots.txt  sitemap.xml  thanks.html
finance-atlas/: README.md  atlas_data.py  generate.py  pytest.ini
intercompany-automation/: README.md  intercompany_report.json  intercompany_report.md  pytest.ini  run.py
knowledge-brain-engine/: README.md  pytest.ini  run.py
monthly-close-automation/: .gitignore  README.md  run.py
partnership-1065-automation/: README.md  run.py
partnership-tax-engine/: README.md  pytest.ini  run.py
project-draw-automation/: README.md  draw_report.json  draw_report.md  pytest.ini  run.py
(+593 files in other folders)
