[project]
name = "cash-engine"
version = "1.0.0"
description = "Validation-only cash-manager controls: bank-rec bridge, outstanding checks, wire dual-approval, register continuity, concentration sweep (fully synthetic data)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["cash_engine/tests"]
addopts = "-q"
