[project]
name = "recon-engine"
version = "1.0.0"
description = "Deterministic cash & debt reconciliation engine with a 5-section evidence log (fully synthetic data)."
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["recon_engine/tests"]
addopts = "-q"
